[package]
name = "rusty_pipe_server"
version = "0.1.0"
authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.6.2"
warp = "0.2"
futures = { version = "0.3.1", features = ["compat"] }
reqwest = { version = "0.10", features = ["json"] }
futures-util = "0.3.4"
tokio = { version = "0.2", features = ["full"] }

juniper_codegen = { git = "https://github.com/graphql-rust/juniper" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper" }

rusty_pipe = {git = "https://github.com/deep-gaurav/rusty_pipe"}
async-trait = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
lazy_static = "1.4.0"
quick-js = "0.3.0"
hyper-tls = "0.4.3"
hyper = "0.13"